# navigation_among_pedestrians

./: README.md
A_LOAM/: CMakeLists.txt  README.md
A_LOAM/launch/: aloam_velodyne_VLP16.launch  amcl.launch  gmapping.launch  human_detection.launch  quadruped_dwa.launch  quadruped_move_base.launch
A_LOAM/map/: map.pgm  map.yaml
A_LOAM/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
A_LOAM/rviz_cfg/: aloam_velodyne.rviz  gmapping.rviz  human_detection.rviz  quadruped_dwa.rviz
A_LOAM/src/: human_detection.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
CADRL_LSTMRL_SARL_RGL/crowd_nav/: plot_log_env.py  test.py  train.py
CADRL_LSTMRL_SARL_RGL/crowd_nav/configs/icra_benchmark/: cadrl_real.py  config.py  config_real.py  lstm_rl_real.py  mp_separate.py  rgl_real.py  sarl_real.py
CADRL_LSTMRL_SARL_RGL/crowd_nav/policy/: cadrl.py  lstm_rl.py
CADRL_LSTMRL_SARL_RGL/crowd_nav/utils/: explorer.py  memory.py  trainer.py
CADRL_LSTMRL_SARL_RGL/crowd_sim/envs/: crowd_sim.py  crowd_sim_real.py
CADRL_LSTMRL_SARL_RGL/crowd_sim/envs/policy/: orca.py  policy_factory.py  random_policy.py
CADRL_LSTMRL_SARL_RGL/crowd_sim/envs/utils/: info.py
MRLCF/: agent.py  configs.yaml  episode_to_video.py  evaluation.py  real_evaluation.py  train.py
MRLCF/common/: __init__.py  driver.py  envs.py  envs_goal_map.py  human.py  nets.py  orca.py  replay.py  robot.py
MRLCF/common/lidar_scan_to_map/: envs.py
ORCA/: ORCA_policy.py  crowd_sim.py
ORCA/C_library/: motion_plan_lib.pyx
ORCA/policy/: lidar_dqn.py  policy_factory.py
RNN_RL/: crowd_sim.py  crowd_sim_complicate.py  info.py  main.py  plot_log_env.py  read_data.py
RNN_RL/C_library/: motion_plan_lib.pyx
RNN_RL/algos/: TD3.py
RNN_RL/utils/: memory.py
RNN_RL_RAL_Image/: crowd_sim.py  main.py  plot_log_env.py
RNN_RL_RAL_Image/algos/: TD3.py
RNN_RL_RAL_Image/utils/: memory.py
RelationalGraphLearning/: setup.py
RelationalGraphLearning/crowd_nav/: test.py  train.py
RelationalGraphLearning/crowd_nav/configs/icra_benchmark/: cadrl.py  config.py  lstm_rl.py  rgl.py  sarl.py
RelationalGraphLearning/crowd_nav/policy/: cadrl.py  graph_model.py  model_predictive_rl.py
RelationalGraphLearning/crowd_nav/utils/: explorer.py  trainer.py
RelationalGraphLearning/crowd_sim/envs/: crowd_sim.py
RelationalGraphLearning/crowd_sim/envs/policy/: linear.py  policy_factory.py  (+2 more)
crowd_nav_lidar_scan_ego/: crowd_sim.py  memory.py  test.py  train.py
crowd_nav_lidar_scan_ego/C_library/: motion_plan_lib.c  setup.py
crowd_nav_lidar_scan_ego/policy/: lidar_dqn.py  orca.py  policy_factory.py
crowd_nav_lidar_scan_ego/utils/: human.py  robot.py
unitree_legged_sdk/: CMakeLists.txt  README.md  ipconfig.sh  package.xml
unitree_legged_sdk/include/unitree_legged_sdk/: comm.h
unitree_legged_sdk/launch/: control_via_keyboard.launch  motion_capture.launch  real.launch  speed_calibration.launch  unitree_planning.launch
unitree_legged_sdk/src/: cal.py  cal_euler.py  control_via_keyboard.cpp  example_walk.cpp  speed_calibration.cpp  unitree_planning.cpp
(+1 files in other folders)
